# murder-generator

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  build.sh  dune-project  index.html  main.js  package.json  server.sh  styles.css  translations.json
data/: dreams.murder  en.names  family.murder  fr.names  frequent_us.names  friends.murder  identity.murder  job.murder  kids.murder  language.murder  memories.murder  notary.murder  objectives.murder  politics.murder  relations.murder  religion.murder  romance.murder  secrets.murder  test.murder  wars.murder  wounds.murder
data/elements/: curses.murder  dreams.murder  family.murder  friends.murder  identity.murder  kids.murder  language.murder  memories.murder  notary.murder  places.murder  politics.murder  religion.murder  romance.murder  secrets.murder  wars.murder  wounds.murder
data/names/: en.names  eo.names  fiction.names  fr.names  frequent_fr.names  frequent_us.names  pt.names  scientists.names
doc/: advanced.md  elements.md  index.html  index.md  memory.md  structure.md  translations.md
doc/explanations/: advanced.md  elements.md  language.md  memory.md  names.md
doc/howto/: age.md  all.md  space.md
doc/murder-generator/: index.html
doc/murder-generator/Murder_generator/: index.html
doc/murder-generator/Murder_generator/Ast/: index.html
doc/murder-generator/Murder_generator/Attribute/: index.html
doc/murder-generator/Murder_generator/Attribute/ContactAttribute/: index.html
doc/murder-generator/Murder_generator/Attribute/PlayerAttribute/: index.html
doc/murder-generator/Murder_generator/Attribute/module-type-Attribute/: index.html
doc/murder-generator/Murder_generator/Driver/: index.html
doc/murder-generator/Murder_generator/Element/: index.html
doc/murder-generator/Murder_generator/Events/: index.html
doc/murder-generator/Murder_generator/Export/: index.html
doc/murder-generator/Murder_generator/History/: index.html
doc/murder-generator/Murder_generator/InOut/: index.html
doc/murder-generator/Murder_generator/InOut/module-type-T/: index.html
doc/murder-generator/Murder_generator/Lexer/: index.html
doc/murder-generator/Murder_generator/Main/: index.html
doc/murder-generator/Murder_generator/Main/Main/: index.html
doc/murder-generator/Murder_generator/Main/Main/argument-1-IO/: index.html
doc/murder-generator/Murder_generator/MurderFiles/: index.html
doc/murder-generator/Murder_generator/NameFiles/: index.html
doc/murder-generator/Murder_generator/Names/: index.html
doc/murder-generator/Murder_generator/Parser/: index.html
doc/murder-generator/Murder_generator/Pool/: index.html
doc/murder-generator/Murder_generator/Relation/: index.html
doc/murder-generator/Murder_generator/Solver/: index.html
doc/murder-generator/Murder_generator/State/: index.html
doc/murder-generator/Murder_generator/Tests/: index.html
doc/murder-generator/Murder_generator/Translation/: index.html
doc/murder-generator/Murder_generator/UsedTranslations/: index.html
doc/murder-generator/Murder_generator/Version/: index.html
doc/murder-generator/Murder_generator__Ast/: index.html
doc/murder-generator/Murder_generator__Attribute/: index.html
doc/murder-generator/Murder_generator__Attribute/ContactAttribute/: index.html
doc/murder-generator/Murder_generator__Attribute/PlayerAttribute/: index.html
doc/murder-generator/Murder_generator__Attribute/module-type-Attribute/: index.html
doc/murder-generator/Murder_generator__Driver/: index.html
doc/murder-generator/Murder_generator__Element/: index.html
doc/murder-generator/Murder_generator__Events/: index.html
doc/murder-generator/Murder_generator__Export/: index.html
doc/murder-generator/Murder_generator__History/: index.html
doc/murder-generator/Murder_generator__InOut/: index.html
doc/murder-generator/Murder_generator__InOut/module-type-T/: index.html
doc/murder-generator/Murder_generator__Lexer/: index.html
doc/murder-generator/Murder_generator__Main/: index.html
doc/murder-generator/Murder_generator__Main/Main/: index.html
doc/murder-generator/Murder_generator__Main/Main/argument-1-IO/: index.html
doc/murder-generator/Murder_generator__MurderFiles/: index.html
doc/murder-generator/Murder_generator__NameFiles/: index.html
doc/murder-generator/Murder_generator__Names/: index.html
doc/murder-generator/Murder_generator__Parser/: index.html
doc/murder-generator/Murder_generator__Pool/: index.html
doc/murder-generator/Murder_generator__Relation/: index.html
doc/murder-generator/Murder_generator__Solver/: index.html
doc/murder-generator/Murder_generator__State/: index.html
doc/murder-generator/Murder_generator__Tests/: index.html
doc/murder-generator/Murder_generator__Translation/: index.html
doc/murder-generator/Murder_generator__UsedTranslations/: index.html
doc/murder-generator/Murder_generator__Version/: index.html
doc/references/: grammar.md  structure.md  translations.md
doc/tutorials/: basic.md
dummy/: murderFiles.mli  nameFiles.mli  version.ml  version.mli
esy.lock/: index.json
js/: dune  inOut_js.ml  main_js.ml
lib/: bidirectionalList.ml  bidirectionalList.mli  date.ml  date.mli  id.ml  id.mli  inOut.ml  inOut.mli  inOut_js.ml  inOut_native.ml  pSet.ml  pSet.mli  unionFind.ml  unionFind.mli  utils.ml  utils.mli
native/: dune  inOut_native.ml  main_native.ml
src/: ast.mli  attribute.ml  attribute.mli  driver.ml  driver.mli  dune  element.ml  element.mli  event.ml  event.mli  events.ml  events.mli  export.ml  export.mli  generator.ml  generator.mli  history.ml  history.mli  inOut.ml  inOut.mli  inOut_js.ml  inOut_native.ml  lexer.mll  main.ml  main_native.ml  murderFiles.ml  murderFiles.mli  nameFiles.mli  names.ml  names.mli  parser.mly  pool.ml  pool.mli  relation.ml  relation.mli  relations.ml  relations.mli  solver.ml  solver.mli  state.ml  (+12 more)
web/: index.html  main.js  styles.css  translations.json
