(lang dune 1.11)

(name murder-generator)
(maintainers "Martin Constantino–Bodin <martin.bodin@ens-lyon.org>")
(source (github Mbodin/murder-generator))
(homepage "https://mbodin.github.io/murder-generator/")

(license AGPL-3.0-or-later)

(package
  (name murder-generator)
  (synopsis "A program to generate random murder parties")
  (description "This program combines storylets to create a custom scenario."))

(explicit_js_mode)

